The code was synced with WebPaint.

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,8 +10,8 @@ Loïc Fontaine - http://github.com/lfont - MIT Licensed
         <meta charset='utf-8'>
         <link rel="stylesheet" href="css/index.css" />
         <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-        <script src="../drawing-0.5.0.js"></script>
-        <script src="../drawing.event-0.5.0.js"></script>
+        <script src="../drawing-0.8.0.js"></script>
+        <script src="../drawing.event.jquery-0.7.0.js"></script>
         <script src="js/index.js"></script>
     </head>
     <body>
@@ -22,7 +22,7 @@ Loïc Fontaine - http://github.com/lfont - MIT Licensed
                 <option value="rectangle">Rectangle</option>
                 <option value="circle">Circle</option>
             </select>
-        <div>
+        </div>
         <canvas id="canvas" height="300" width="300"></canvas>
     </body>
 </html>
